--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,20 +1,22 @@
-.profile__editbutton {
+.profile__edit-button {
     width: 24px;
     box-sizing: border-box;
+    background-color: #000;
     background-repeat: no-repeat;
     background-position: center;
     background-image: url(../../../images/Editbutton.svg);
     border: 1px solid #fff;
-    margin: 0 0 9px 18px;
-    padding-top: 24px;
+    margin: 35px 0 9px 8px;
+    padding: 0;
+    cursor: pointer;
 }
-.profile__editbutton:hover {
+.profile__edit-button:hover {
     opacity: 0.6;
 }
-@media screen and (max-width: 767px) {
-    .profile__editbutton {
+@media screen and (max-width: 950px) {
+    .profile__edit-button {
         width: 18px;
         padding-top: 18px;
-        margin: 0 0 7px 10px;    
+        margin: 6px 0 7px 10px;    
     }
 }
