--- a/pages/index.css
+++ b/pages/index.css
@@ -7,27 +7,27 @@
 @import url(../blocks/header/__logo/header__logo.css);
 
 @import url(../blocks/profile/profile.css);
-@import url(../blocks/profile/__aboutname/profile__aboutname.css);
-@import url(../blocks/profile/__addbutton/profile__addbutton.css);
+@import url(../blocks/profile/__about-name/profile__about-name.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
-@import url(../blocks/profile/__editbutton/profile__editbutton.css);
+@import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name/profile__name.css);
 
 @import url(../blocks/elements/elements.css);
-@import url(../blocks/elements/__element/elements__element.css);
-@import url(../blocks/elements/__group/elements__group.css);
-@import url(../blocks/elements/__maskgroup/elements__maskgroup.css);
-@import url(../blocks/elements/__namegroup/elements__namegroup.css);
-@import url(../blocks/elements/__boxfornamegroup/elements__boxfornamegroup.css);
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__box-for-name-group/element__box-for-name-group.css);
+@import url(../blocks/element/__group/element__group.css);
+@import url(../blocks/element/__mask-group/element__mask-group.css);
+@import url(../blocks/element/__name-group/element__name-group.css);
 
 @import url(../blocks/footer/footer.css);
 
 @import url(../blocks/popup/popup.css);
-@import url(../blocks/popup/__aboutname/popup__aboutname.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__icon/popup__icon.css);
 @import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/popup/__name/popup__name.css);
-@import url(../blocks/popup/__submitbutton/popup__submitbutton.css);
+@import url(../blocks/popup/__put-field/popup__put-field.css);
+@import url(../blocks/popup/__put-field/_position/popup__put-field_position_bottom-field.css);
+@import url(../blocks/popup/__submit-button/popup__submit-button.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
