--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,14 +1,12 @@
 .header {
-    display: grid;
     max-width: 880px;
-    gap: 41px;
-    margin: 0 auto;
-    padding-top: 45px;
-    border-bottom: 1px solid #545454;
+    margin: 0 200px;
+    padding: 45px 0 41px;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 @media screen and (max-width: 767px) {
     .header {
-        gap: 32px;
-        padding-top: 28px;
+        margin: 0;
+        padding: 28px 0 32px;
     }
 }
