--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -1,7 +1,6 @@
-.popup__submitbutton {
+.popup__submit-button {
     min-width: 358px;
-    height: 50px;
-    margin: 48px auto 37px;
+    margin: 48px 36px 37px;
     background-color: #000;
     color: #fff;
     line-height: 22px;
@@ -9,15 +8,16 @@
     font-weight: 400;
     border-radius: 2px;
     border: none;
-    padding: 0;
+    padding: 19px 0;
+    cursor: pointer;   
 }
-.popup__submitbutton:hover {
+.popup__submit-button:hover {
     opacity: 0.8;
 }
 @media screen and (max-width: 767px) {
-    .popup__submitbutton {
+    .popup__submit-button {
         min-width: 238px;
-        margin-bottom: 25px;
+        margin: 45px 22px 25px;
         line-height: 17px;
         font-size: 14px;
     }
