--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,16 +1,15 @@
 .popup {
     position: fixed;
+    left: 0;
+    top: 0;
+    grid-template-rows: repeat(2, minmax(min-content, max-content));
     width: 100%;
-    max-width: 1280px;
     height: 100vh;
-    margin: 0 auto;
+    margin: 0;
+    padding: 0;
+    border: 0;
     background-size: cover;
     background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
-    gap: 8px;
-}
-@media screen and (max-width: 767px) {
-    .popup {
-        gap: 16px;
-    }
+    align-content: center;
 }
