--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,20 +1,23 @@
-.profile__addbutton {
+.profile__add-button {
     align-self: center;
     min-width: 150px;
     box-sizing: border-box;
     background-repeat: no-repeat;
     background-position: center;
+    background-color: #000;
     background-image: url(../../../images/Addbutton.svg);
-    border: 1px solid #fff;
+    border: 2px solid #fff;
+    border-radius: 2px;
+    padding: 0;
     padding-top: 50px;
+    cursor: pointer;
 }
 .profile__addbutton:hover {
     opacity: 0.6;
 }
-@media screen and (max-width: 767px) {
-    .profile__addbutton {
+@media screen and (max-width: 950px) {
+    .profile__add-button {
         background-size: 16px;
-        border: 2px solid #fff;
         margin-top: 32px;
         min-width: 282px;
     }
