--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,10 @@
 .profile__info {
     margin-left: 30px;
     display: grid;
+    grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content);
     gap: 10px;    
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 950px) {
     .profile__info {
         gap: 7px;
         margin-left: 0;
