--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,9 +5,13 @@
     font-size: 42px;
     font-weight: 500;
     margin: 0;
+    max-width: 294px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 950px) {
     .profile__name {
         margin-left: 25px;
         line-height: 33px;
