--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,12 +3,11 @@
     display: grid;
     grid-template-columns: 120px auto 150px;
     color: #fff;
-    margin: 40px auto 0;
-    
+    margin: 40px 15.6% 0;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 950px) {
     .profile {
-        margin-top: 42px;
+        margin: 40px 0 0;
         grid-template-columns: 1fr;
         justify-items: center;
     }
