--- a/blocks/profile/__about-name/profile__about-name.css
+++ b/blocks/profile/__about-name/profile__about-name.css
@@ -10,6 +10,8 @@
 }
 @media screen and (max-width: 950px) {
     .profile__about-name {
+        max-width: 189px;
+        margin-left: 25px;
         line-height: 17px;
         font-size: 14px;
         text-align: center;
