--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,7 @@
 .profile__edit-button {
     width: 24px;
     box-sizing: border-box;
-    background-color: #000;
+    background-color: rgba(0, 0, 0, 0);
     background-repeat: no-repeat;
     background-position: center;
     background-image: url(../../../images/Editbutton.svg);
