--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -13,6 +13,7 @@
 }
 @media screen and (max-width: 950px) {
     .profile__name {
+        max-width: 189px;
         margin-left: 25px;
         line-height: 33px;
         font-size: 27px;
