--- a/blocks/element/__mask-group/element__mask-group.css
+++ b/blocks/element/__mask-group/element__mask-group.css
@@ -1,3 +1,9 @@
 .element__mask-group {
-    max-width: 100%;    
+    object-fit: cover;
+    max-width: 282px; 
+    height: 282px;   
+}
+
+.element__mask-group:hover {
+    cursor: pointer;
 }
