--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -12,7 +12,7 @@
     padding-top: 50px;
     cursor: pointer;
 }
-.profile__addbutton:hover {
+.profile__add-button:hover {
     opacity: 0.6;
 }
 @media screen and (max-width: 950px) {
