--- a/pages/index.css
+++ b/pages/index.css
@@ -20,6 +20,8 @@
 @import url(../blocks/element/__group/element__group.css);
 @import url(../blocks/element/__mask-group/element__mask-group.css);
 @import url(../blocks/element/__name-group/element__name-group.css);
+@import url(../blocks/element/__delete/element__delete.css);
+@import url(../blocks/element/__group/_active/element__group_active.css);
 
 @import url(../blocks/footer/footer.css);
 
@@ -30,3 +32,6 @@
 @import url(../blocks/popup/__put-field/popup__put-field.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__caption/popup__caption.css);
+@import url(../blocks/popup/__figure/popup__figure.css);
+@import url(../blocks/popup/__image/popup__img.css);
