--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,5 @@
 .popup {
+    display: grid;
     position: fixed;
     left: 0;
     top: 0;
@@ -12,4 +13,7 @@
     background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-content: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: .5s;
 }
