--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -31,7 +31,11 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__put-field/popup__put-field.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
+@import url(../blocks/popup/__submit-button/_inactive/popup__submit-button_inactive.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__caption/popup__caption.css);
 @import url(../blocks/popup/__figure/popup__figure.css);
 @import url(../blocks/popup/__image/popup__img.css);
+@import url(../blocks/popup/__put-field-error/popup__put-field-error.css);
+@import url(../blocks/popup/__put-field-error/_active/popup__put-field-error_active.css);
+@import url(../blocks/popup/__put-field/_type/popup__put-field_type_error.css);
