--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -13,6 +13,8 @@
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/profile/__avatar-hover/profile__avatar-hover.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
@@ -22,6 +24,9 @@
 @import url(../blocks/element/__name-group/element__name-group.css);
 @import url(../blocks/element/__delete/element__delete.css);
 @import url(../blocks/element/__group/_active/element__group_active.css);
+@import url(../blocks/element/__amount-likes/element__amount-likes.css);
+@import url(../blocks/element/__delete/_nonactive/elenent__delete_nonactive.css);
+
 
 @import url(../blocks/footer/footer.css);
 
