--- a/main.css
+++ b/main.css
@@ -10,6 +10,8 @@
 .profile__edit-button{background-color:transparent;background-image:url(6c7bf05444b9793fdf6e.svg);background-position:50%;background-repeat:no-repeat;border:1px solid #fff;box-sizing:border-box;cursor:pointer;margin:35px 0 9px 8px;padding:0;width:24px}.profile__edit-button:hover{opacity:.6}@media screen and (max-width:950px){.profile__edit-button{margin:6px 0 7px 10px;padding-top:18px;width:18px}}
 .profile__info{display:grid;gap:10px;grid-template-columns:minmax(min-content,max-content) minmax(min-content,max-content);margin-left:30px}@media screen and (max-width:950px){.profile__info{gap:7px;margin-left:0;margin-top:26px;max-width:282px}}
 .profile__name{align-items:flex-end;display:flex;font-size:42px;font-weight:500;line-height:48px;margin:0;max-width:294px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:950px){.profile__name{font-size:27px;line-height:33px;margin-left:25px;max-width:189px;text-align:center}}
+.profile__avatar-hover{background:no-repeat rgba(0,0,0,.8) 50%/26px url(ae1a976ddb506239e9f0.svg);border:none;border-radius:50%;bottom:0;height:120px;max-width:100%;opacity:0;position:absolute;right:0;top:0;width:120px}.profile__avatar-hover:hover{cursor:pointer;opacity:1}
+.profile__avatar-container{border-radius:60px;max-width:120px;min-height:120px;position:relative}
 .elements{display:grid;gap:20px 17px;grid-template-columns:repeat(auto-fit,282px);justify-content:center;margin:50px auto 0;max-width:880px;padding:0}@media screen and (max-width:767px){.elements{margin-top:36px}}
 .element{background-color:#fff;border-radius:10px;display:flex;flex-direction:column;overflow:hidden;width:282px}
 .element__box-for-name-group{align-items:center;display:flex;justify-content:space-between;margin:25px 15px 25px 21px}
@@ -18,6 +20,8 @@
 .element__name-group{font-size:24px;font-weight:900;line-height:29px;margin:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .element__delete{align-self:flex-end;background-color:transparent;background-image:url(96f3e8182c3a9915dfee.png);background-size:cover;border:0;height:20px;justify-self:flex-end;margin-right:20px;margin-top:20px;position:absolute;width:20px}.element__delete:hover{cursor:pointer;opacity:.5;transition:.35s}
 .element__group_active{background-image:url(3c3d01c204589e3c5dcc.svg)}
+.element__amount-likes{font-family:Inter,Arial,sans-serif;font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin:0;text-align:center}
+.element__delete_nonactive{display:none}
 .footer{color:#545454;font-size:18px;font-weight:400;line-height:22px;margin:66px auto 0;max-width:880px;padding-bottom:60px}@media screen and (max-width:767px){.footer{font-size:14px;line-height:17px;margin-top:48px;max-width:282px}}
 .popup{align-content:center;background-color:rgba(0,0,0,.5);background-size:cover;border:0;display:grid;grid-template-rows:repeat(2,minmax(min-content,max-content));height:100vh;justify-content:center;left:0;margin:0;opacity:0;padding:0;position:fixed;top:0;transition:.5s;visibility:hidden;width:100%}
 .popup__container{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);display:flex;flex-direction:column;width:430px}@media screen and (max-width:767px){.popup__container{width:282px}}
