--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,5 +1,6 @@
 .profile__avatar {
     border-radius: 60px;
-    max-width: 120px;
-    
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
 }
